archivst: basic implementatin of asset storage, file upload only.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -289,8 +289,17 @@ zorroa.cluster.path.certs=${zorroa.cluster.path.shared}/certs
 
 ## Cluster Environment Settings
 
-### Propagate an environment varaible to all analyst processes.
-#//zorroa.cluster.env.PYTHONPATH = $PYTHONPATH:/usr/local/lib/python2.7/site-packages
+### Type of object storage. The default is a locally running minio server
+archivist.storage.type = minio
+
+### The object store endpoint
+archivist.storage.minio.endpoint = http://localhost:9000
+
+### The object store access key
+archivist.storage.minio.accessKey = zorroa
+
+### The object store secret key
+archivist.storage.minio.secretKey = miniostorage
 
 # Spring Settings
 
@@ -362,11 +371,9 @@ spring.thymeleaf.excluded-view-names=index
 
 ## File Upload Settings
 
-### The maximum filesize for a multipart request.
-spring.http.multipart.max-file-size=250Mb
-
-## The maxiumum size of a multipart request.
-spring.http.multipart.max-request-size=500Mb
+### Disable multi-part processing as we're handling this manually.
+### to utilize file streams
+spring.http.multipart.enabled=false
 
 ## Connection Pool.
 
