--- a/saml/pom.xml
+++ b/saml/pom.xml
@@ -9,9 +9,10 @@
     <version>0.40.0-SNAPSHOT</version>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>1.5.9.RELEASE</version>
+        <relativePath>../pom.xml</relativePath>
+        <groupId>com.zorroa</groupId>
+        <artifactId>zorroa-server</artifactId>
+        <version>0.40.0-SNAPSHOT</version>
     </parent>
 
     <properties>
