--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>ldap</module>
         <module>saml</module>
         <module>es-similarity</module>
+        <module>irm-studio</module>
     </modules>
 
     <dependencyManagement>
