Updated Archivist to run in Google App Engine/ IRM Dit1.

--- a/archivist/Dockerfile
+++ b/archivist/Dockerfile
@@ -3,7 +3,7 @@ VOLUME /tmp
 MAINTAINER Zorroa <support@zorroa.com>
 ARG JAR_FILE
 RUN mkdir /service
-COPY target/${JAR_FILE} /service/app.jar
+COPY target/archivist.jar /service/app.jar
 
 EXPOSE 8066
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom", "-jar", "/service/app.jar"]
