--- a/ldap/pom.xml
+++ b/ldap/pom.xml
@@ -15,7 +15,6 @@
     <version>0.40.0-SNAPSHOT</version>
 
     <properties>
-        <kotlin.version>1.2.41</kotlin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>4.12</junit.version>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -25,8 +24,7 @@
     <dependencies>
         <dependency>
             <groupId>com.zorroa</groupId>
-            <artifactId>server-sdk</artifactId>
-            <version>${project.version}</version>
+            <artifactId>lib-security</artifactId>
             <scope>provided</scope>
         </dependency>
 
