--- a/saml/pom.xml
+++ b/saml/pom.xml
@@ -16,7 +16,6 @@
     </parent>
 
     <properties>
-        <kotlin.version>1.2.41</kotlin.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
@@ -37,8 +36,7 @@
 
         <dependency>
             <groupId>com.zorroa</groupId>
-            <artifactId>server-sdk</artifactId>
-            <version>${project.version}</version>
+            <artifactId>lib-security</artifactId>
             <scope>provided</scope>
         </dependency>
 
