Updated to Spring Boot 2.0.3

--- a/archivist/src/main/resources/application-local.properties
+++ b/archivist/src/main/resources/application-local.properties
@@ -1,4 +1,6 @@
+flyway.schemas=local
 
-archivist.datasource.primary.url=jdbc:postgresql://docker.for.mac.localhost:5432/zorroa?currentSchema=zorroa
-archivist.datasource.primary.username=zorroa
-archivist.datasource.primary.password=zorroa
+spring.datasource.url=jdbc:postgresql://docker.for.mac.localhost:5432/zorroa?currentSchema=local
+spring.datasource.username=${USER}
+spring.datasource.password=
+
