--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -81,17 +81,10 @@ flyway.schemas=zorroa
 ### The SQL DB vendor.
 archivist.datasource.primary.vendor=postgresql
 
-### The JDBC URL to the Archivist SQL database.
-archivist.datasource.primary.url=jdbc:postgresql://localhost:5432/zorroa?currentSchema=zorroa
-
-### The driver for the Archivist SQL database.
-archivist.datasource.primary.driver-class-name=org.postgresql.Driver
-
-### The username for the Archivist SQL database.
-archivist.datasource.primary.username=${USER}
-
-### The password for the Archivist SQL database.
-archivist.datasource.primary.password=zorroa
+spring.datasource.url = jdbc:postgresql://localhost:5432/zorroa?currentSchema=zorroa
+spring.datasource.username=zorroa
+spring.datasource.password=zorroa
+spring.datasource.driver-class-name = org.postgresql.Driver
 
 ## Password Security Configuration
 
@@ -317,10 +310,7 @@ spring.mail.port = 25
 server.fqdn=localhost
 
 ### The TCP port for client libraries for communicate with server. This port will be used for https when https is enabled.
-server.port=8066
-
-### Additonal port to be used for http connections.
-server.http_port=8080
+server.port=8080
 
 ### The timeout for inactive sessions.  Timed out sessions are removed.
 server.session.timeout=6000
