--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -2,8 +2,10 @@
 archivist.path.index=unittest/index
 archivist.path.home=unittest
 
-### The SQL DB vendor.
-archivist.datasource.primary.vendor=postgresql
+
+spring.datasource.url = jdbc:postgresql://localhost/${USER}?currentSchema=unittest40
+spring.datasource.username=${USER}
+spring.datasource.password=
 
 ### The JDBC URL to the Archivist SQL database.
 flyway.schemas=unittest40
