--- a/archivist/src/main/resources/application-dit1.properties
+++ b/archivist/src/main/resources/application-dit1.properties
@@ -1,4 +1,5 @@
 flyway.schemas=zorroa
-archivist.datasource.primary.username=postgres
-archivist.datasource.primary.password=Mvr2tPefAa1iyA0F
-archivist.datasource.primary.url=jdbc:postgresql://google/zorroa_dit1?currentSchema=zorroa&useSSL=false&socketFactoryArg=rmaas-dit-1:us-central1:zorroa-pg&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=Mvr2tPefAa1iyA0F
+
+spring.datasource.url = jdbc:postgresql://google/zorroa_dit1?currentSchema=zorroa&useSSL=false&socketFactoryArg=rmaas-dit-1:us-central1:zorroa-pg&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=Mvr2tPefAa1iyA0F
+spring.datasource.username=postgres
+spring.datasource.password=Mvr2tPefAa1iyA0F
