--- a/lib-security/pom.xml
+++ b/lib-security/pom.xml
@@ -8,11 +8,9 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>lib-security</artifactId>
     <packaging>jar</packaging>
-
-    <name>com.zorroa lib-security</name>
+    <name>lib-security</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
