--- a/irm-studio/src/main/resources/application-dit1.properties
+++ b/irm-studio/src/main/resources/application-dit1.properties
@@ -18,9 +18,7 @@ irm.cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
 spring.flyway.schemas = studio
 spring.flyway.locations=classpath:/db/migration
 
-spring.datasource.url = jdbc:postgresql://35.202.4.94:5432/zorroa_dit1?currentSchema=studio
+spring.datasource.url = jdbc:postgresql://google/zorroa_dit1?currentSchema=studio&useSSL=false&socketFactoryArg=rmaas-dit-1:us-central1:zorroa-pg&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=Mvr2tPefAa1iyA0F
 spring.datasource.username=postgres
 spring.datasource.password=Mvr2tPefAa1iyA0F
-spring.datasource.tomcat.max-wait = 10000
-spring.datasource.tomcat.max-active = 50
-spring.datasource.tomcat.test-on-borrow=true
+
