--- a/irm-studio/Dockerfile
+++ b/irm-studio/Dockerfile
@@ -1,13 +1,10 @@
 FROM openjdk:8-jre-slim
 VOLUME /tmp
-MAINTAINER Matt Chambers <mrc@zorroa.com>
-ARG JAR_FILE
+MAINTAINER Zorroa <support@zorroa.com>
 RUN mkdir /service
-COPY target/${JAR_FILE} /service/app.jar
-RUN mkdir /keys
-COPY keys/ /keys/
+COPY target/irm-studio.jar  /service/app.jar
+COPY keys /keys
 
 EXPOSE 8080
-
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom", "-jar", "/service/app.jar"]
 CMD = []
