--- a/irm-studio/pom.xml
+++ b/irm-studio/pom.xml
@@ -163,7 +163,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <finalName>irm-studio</finalName>
+                    <finalName>zorroa-studio</finalName>
                     <mainClass>com.zorroa.irm.studio.ApplicationKt</mainClass>
                 </configuration>
                 <executions>
