--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
         <module>ldap</module>
         <module>saml</module>
         <module>archivist</module>
+        <module>studio</module>
         <module>es-similarity</module>
-        <module>irm-studio</module>
     </modules>
 
     <dependencyManagement>
