--- a/studio/pom.xml
+++ b/studio/pom.xml
@@ -11,7 +11,7 @@
 
     <name>zorroa-studio</name>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>irm-studio</artifactId>
+    <artifactId>studio</artifactId>
     <packaging>jar</packaging>
 
     <properties>
