--- a/studio/src/main/resources/application-dit1.properties
+++ b/studio/src/main/resources/application-dit1.properties
@@ -12,7 +12,7 @@ gcp.k8.namespace = default
 gcp.k8.image = gcr.io/rmaas-dit-1/zpsgo:latest
 gcp.k8.talkbackUrl = https://zorroa-studio-dot-rmaas-dit-1.appspot.com
 
-zorroa.pipelines.defaultPipelines = test
+zorroa.pipeline.defaultPipelines = dit1-ingest
 
 irm.cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
 
