--- a/archivist/irm-qa1-app.yaml
+++ b/archivist/irm-qa1-app.yaml
@@ -3,3 +3,6 @@ env: flex
 service: zorroa-archivist
 env_variables:
      SPRING_PROFILES_ACTIVE: "qa1"
+automatic_scaling:
+    max_num_instances: 1
+
