Implemented pulling ES REST client from client cache.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -108,6 +108,9 @@ archivist.search.sortFields = zorroa.timeCreated:DESC
 ### The order in which to request HMTL5 video formats when streaming video
 archivist.export.videoStreamExtensionFallbackOrder=mp4,m4v,webm,ogv,ogg
 
+### Maximum number of files that can be exported in 1 job.
+archivist.export.maxAssetCount = 1000
+
 ## Watermark Settings
 
 ### Enable watermarking of proxy images.
@@ -161,6 +164,16 @@ archivivst.storage.ofs.path = shared/ofs
 
 ### Remove shared links after N days
 archivist.maintenance.sharedLinks.expireDays = 7
+
+# Core Data Vault Settings
+
+## Service Properties
+
+### The URL to the core data vault service.
+
+cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
+
+routing.url = http://localhost:9200
 
 # Spring Settings
 
@@ -251,7 +264,7 @@ endpoints.metrics.sensitive=false
 flyway.check-location=true
 
 ### The location of the DB migration files.
-flyway.locations=classpath:db/migration/${archivist.datasource.primary.vendor}
+flyway.locations=classpath:db/migration/postgresql
 
 ## JSON Options
 
