--- a/archivist/src/main/resources/application-dit1.properties
+++ b/archivist/src/main/resources/application-dit1.properties
@@ -3,3 +3,7 @@ flyway.schemas=zorroa
 spring.datasource.url = jdbc:postgresql://google/zorroa_dit1?currentSchema=zorroa&useSSL=false&socketFactoryArg=rmaas-dit-1:us-central1:zorroa-pg&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=Mvr2tPefAa1iyA0F
 spring.datasource.username=postgres
 spring.datasource.password=Mvr2tPefAa1iyA0F
+
+cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
+
+routing.url = http://10.128.0.8:9200
