Refactored the concept of an Asset to try and align with IRM
- can have stored arbitrary metadata that is not indexed
- try to support company Id and orgId
- removed code for creating assets, and utilize core data vault client.

--- a/studio/src/main/resources/application-dit1.properties
+++ b/studio/src/main/resources/application-dit1.properties
@@ -14,7 +14,7 @@ gcp.k8.talkbackUrl = https://zorroa-studio-dot-rmaas-dit-1.appspot.com
 
 zorroa.pipeline.defaultPipelines = dit1-ingest
 
-irm.cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
+cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
 
 spring.flyway.schemas = studio
 spring.flyway.locations=classpath:/db/migration
