--- a/studio/src/test/resources/application-test.properties
+++ b/studio/src/test/resources/application-test.properties
@@ -13,7 +13,7 @@ gcp.storage.credentialsFile = /Users/chambers/src/.keys/rmass-dit1.json
 
 zorroa.pipeline.defaultPipelines = test
 
-irm.cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
+cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
 
 spring.flyway.schemas = studio
 spring.flyway.locations=classpath:/db/migration
