Added support for streaming proxies from GCP

--- a/archivist/Dockerfile
+++ b/archivist/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Zorroa <support@zorroa.com>
 ARG JAR_FILE
 RUN mkdir /service
 COPY target/archivist.jar /service/app.jar
+COPY keys /keys
 
 EXPOSE 8080
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom", "-jar", "/service/app.jar"]
