Fixes issue with serving proxy images, does not address the _stream endpoint yet.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -154,6 +154,11 @@ archivist.storage.minio.accessKey = zorroa
 ### The object store secret key
 archivist.storage.minio.secretKey = miniostorage
 
+## GCS Storage Settings
+
+### Credentials file for GCS
+archivist.storage.gcs.credentials = keys/rmaas-dit1.json
+
 ## OFS Storage Settings
 
 archivivst.storage.ofs.path = shared/ofs
