--- a/archivist/src/main/resources/application-dit1.properties
+++ b/archivist/src/main/resources/application-dit1.properties
@@ -6,4 +6,7 @@ spring.datasource.password=Mvr2tPefAa1iyA0F
 
 cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
 
+archivist.storage.type = gcs
+archivist.storage.gcs.credentials = keys/rmaas-dit1.json
+
 routing.url = http://10.128.0.8:9200
