Attempt at integrating SAML configuration to new deploy system.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -64,6 +64,9 @@ archivist.security.ldap.filter=(cn={0})
 ## SAML Security configuration.
 
 ### The SAML base return URL
+archivist.security.saml.landingPage = /landing
+
+### The SAML base URL, all endpoints derive from this.
 archivist.security.saml.baseUrl = http://localhost:8066
 
 ### Enable SAML discovery
