--- a/saml/pom.xml
+++ b/saml/pom.xml
@@ -61,6 +61,7 @@
                             <exclude>ch.qos.logback:*</exclude>
                         </excludes>
                     </artifactSet>
+                    <finalName>saml</finalName>
                 </configuration>
                 <executions>
                     <execution>
