--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -1,6 +1,8 @@
 FROM docker.elastic.co/elasticsearch/elasticsearch:6.2.4
-COPY es-similarity-0.40.0-SNAPSHOT.zip /usr/share/elasticsearch/plugins/es-similarity-0.40.0-SNAPSHOT.zip
+COPY es-similarity.zip /usr/share/elasticsearch/plugins/es-similarity.zip
 WORKDIR /usr/share/elasticsearch/plugins
-RUN unzip es-similarity-0.40.0-SNAPSHOT.zip
+RUN unzip es-similarity.zip
 RUN mv elasticsearch zorroa-similarity
-RUN rm es-similarity-0.40.0-SNAPSHOT.zip
+RUN rm es-similarity.zip
+WORKDIR /usr/share/elasticsearch
+
