Fixes issues with aggs and similarity

--- a/archivist/deploy/rmaas-dit-1/config/application.properties
+++ b/archivist/deploy/rmaas-dit-1/config/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=Mvr2tPefAa1iyA0F
 
 cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
 
-archivist.storage.type = gcs
+archivist.storage.type = gcp
 archivist.storage.gcs.credentials = config/credentials.json
 
 routing.url = http://10.128.0.8:9200
