Clean up configuration properties. Better names, removed uneeded, etc.

--- a/archivist/deploy/rmaas-qa-1/application.properties
+++ b/archivist/deploy/rmaas-qa-1/application.properties
@@ -3,9 +3,7 @@ spring.datasource.url = jdbc:postgresql://google/zorroa_qa1?currentSchema=zorroa
 spring.datasource.username=postgres
 spring.datasource.password=Mvr2tPefAa1iyA0F
 
-cdv.url = https://core-data-vault-api-dot-rmaas-qa-1.appspot.com
+archivist.storage.type = gcp
+archivist.storage.gcp.credentials = config/credentials.json
 
-archivist.storage.type = gcs
-archivist.storage.gcs.credentials = config/credentials.json
-
-routing.url = http://10.128.0.8:9200
+es-routing-service = http://10.128.0.8:9200
