--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -2,12 +2,6 @@
 
 ## Default Organization Settings
 
-### If the server is configured for single organization.
-archivist.organization.single-org-mode = true
-
-###
-archivist.organization.single-org-index = archivist
-
 ### Email domain
 archivist.organization.domain = zorroa.com
 
@@ -157,10 +151,10 @@ archivist.storage.minio.accessKey = zorroa
 ### The object store secret key
 archivist.storage.minio.secretKey = miniostorage
 
-## GCS Storage Settings
+## GCP Storage Settings (Google cloud platform storage)
 
-### Credentials file for GCS
-archivist.storage.gcs.credentials = keys/rmaas-dit1.json
+### Credentials file for GCP
+archivist.storage.gcp.credentials = keys/rmaas-dit1.json
 
 ## OFS Storage Settings
 
@@ -173,22 +167,21 @@ archivivst.storage.ofs.path = shared/ofs
 ### Remove shared links after N days
 archivist.maintenance.sharedLinks.expireDays = 7
 
-# Core Data Vault Settings
+# External Services
 
-## Service Properties
+# ElasticSearch Routing Service
 
-### The URL to the core data vault service.
+### The URL to the ES routing service. The routing service determines where
+### customer data goes.
 
-cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
-
-routing.url = http://localhost:9200
+es-routing-service.url = http://localhost:9200
 
 # Spring Settings
 
 ## Mail Settings
 
 ### The hostname of the mail server.
-spring.mail.host = mail
+spring.mail.host = mail3
 
 ### The port the mail server is running on.
 spring.mail.port = 25
