--- a/archivist/deploy/rmaas-dit-1/config/application.properties
+++ b/archivist/deploy/rmaas-dit-1/config/application.properties
@@ -3,12 +3,10 @@ spring.datasource.url = jdbc:postgresql://google/zorroa_dit1?currentSchema=zorro
 spring.datasource.username=postgres
 spring.datasource.password=Mvr2tPefAa1iyA0F
 
-cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
-
 archivist.storage.type = gcp
-archivist.storage.gcs.credentials = config/credentials.json
+archivist.storage.gcp.credentials = config/credentials.json
 
-routing.url = http://10.128.0.8:9200
+es-routing-service = http://10.128.0.8:9200
 
 archivist.security.saml.keystore.path = /config/saml/keystore.jks
 archivist.security.saml.permissions.import = true
