--- a/elasticsearch/configs/single.yml
+++ b/elasticsearch/configs/single.yml
@@ -1,1 +1,5 @@
-discovery.type : single-node
+discovery.type : "single-node"
+discovery.zen.minimum_master_nodes: 1
+
+cluster.name: "zorroa-es-cluster"
+network.host: 0.0.0.0
