Fixed routing service URL in dit1 config

--- a/archivist/deploy/rmaas-dit-1/config/application.properties
+++ b/archivist/deploy/rmaas-dit-1/config/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=Mvr2tPefAa1iyA0F
 archivist.storage.type = gcp
 archivist.storage.gcp.credentials = config/credentials.json
 
-es-routing-service = http://10.128.0.8:9200
+es-routing-service.url = http://10.128.0.8:9200
 
 archivist.security.saml.keystore.path = /config/saml/keystore.jks
 archivist.security.saml.permissions.import = true
