SAML fixes to not require CERT signing.

--- a/archivist/deploy/rmaas-dit-1/config/application.properties
+++ b/archivist/deploy/rmaas-dit-1/config/application.properties
@@ -10,7 +10,7 @@ es-routing-service.url = http://10.128.0.8:9200
 
 archivist.security.saml.keystore.path = /config/saml/keystore.jks
 archivist.security.saml.permissions.import = true
-archivist.security.saml.baseUrl=https://zorroa-curator-dot-rmaas-dit-1.appspot.com
+archivist.security.saml.baseUrl=http://zorroa-archivist-dot-rmaas-dit-1.appspot.com
 archivist.security.saml.discovery=true
 archivist.security.saml.landingPage=https://zorroa-curator-dot-rmaas-dit-1.appspot.com
 
