Updated studio to use new zbuild.

--- a/studio/Dockerfile
+++ b/studio/Dockerfile
@@ -1,10 +1,19 @@
 FROM openjdk:8-jre-slim
 VOLUME /tmp
 MAINTAINER Zorroa <support@zorroa.com>
+ARG project
+ENV project ${project:-zorroa-evi-dev}
+
 RUN mkdir /service
+RUN mkdir /service/ext
+
 COPY target/zorroa-studio.jar  /service/app.jar
-COPY keys /keys
+COPY deploy/${project}/config config
+COPY deploy/${project}/ext service/ext
 
 EXPOSE 8080
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom", "-jar", "/service/app.jar"]
 CMD = []
+
+
+
