--- a/analyst/pom.xml
+++ b/analyst/pom.xml
@@ -9,9 +9,9 @@
         <version>0.40.0-SNAPSHOT</version>
     </parent>
 
-    <name>zorroa-studio</name>
+    <name>analyst</name>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>studio</artifactId>
+    <artifactId>analyst</artifactId>
     <packaging>jar</packaging>
 
     <properties>
