EVI-619 - Updates the zbuild flow for both the archivist and analyst to be more streamlined and standardized.

--- a/analyst/Dockerfile
+++ b/analyst/Dockerfile
@@ -1,19 +1,18 @@
-FROM openjdk:8-jre-slim
+FROM zorroaevi/8-jre-slim-gcloud
 VOLUME /tmp
 MAINTAINER Zorroa <support@zorroa.com>
+
 ARG project
 ENV project ${project:-zorroa-evi-dev}
+ARG gcs_config
+ENV GCS_CONFIG ${gcs_config}
 
 RUN mkdir /service
 RUN mkdir /service/ext
 
-COPY target/zorroa-studio.jar  /service/app.jar
-COPY deploy/${project}/config config
-COPY deploy/${project}/ext service/ext
+COPY target/analyst.jar  /service/app.jar
+COPY deploy/${project}/ext /service/ext
+COPY run_server.sh run_server.sh
 
 EXPOSE 8080
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom", "-jar", "/service/app.jar"]
-CMD = []
-
-
-
+ENTRYPOINT ["./run_server.sh"]
