--- a/analyst/src/test/resources/application-test.properties
+++ b/analyst/src/test/resources/application-test.properties
@@ -15,10 +15,7 @@ zorroa.pipeline.defaultPipelines = test
 
 cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
 
-spring.flyway.schemas = studio
-spring.flyway.locations=classpath:/db/migration
-
-spring.datasource.url = jdbc:postgresql://localhost:5432/zorroa?currentSchema=studio
+spring.datasource.url = jdbc:postgresql://localhost:5432/zorroa?currentSchema=analyst
 spring.datasource.username=${USER}
 spring.datasource.password=
 spring.datasource.tomcat.max-wait = 10000
