--- a/analyst/Dockerfile
+++ b/analyst/Dockerfile
@@ -7,7 +7,7 @@ ENV project ${project:-zorroa-evi-dev}
 RUN mkdir /service
 RUN mkdir /service/ext
 
-COPY target/zorroa-studio.jar  /service/app.jar
+COPY target/analyst.jar  /service/app.jar
 COPY deploy/${project}/config config
 COPY deploy/${project}/ext service/ext
 
