--- a/analyst/deploy/rmaas-dit-1/config/application.properties
+++ b/analyst/deploy/rmaas-dit-1/config/application.properties
@@ -10,16 +10,13 @@ gcp.k8.username = admin
 gcp.k8.password = G9m3ww0Ku5klMexR
 gcp.k8.namespace = default
 gcp.k8.image = gcr.io/rmaas-dit-1/zpsgo:latest
-gcp.k8.talkbackUrl = https://zorroa-studio-dot-rmaas-dit-1.appspot.com
+gcp.k8.talkbackUrl = https://zorroa-analyst-dot-rmaas-dit-1.appspot.com
 
-zorroa.pipeline.defaultPipelines = dit1-ingest
+zorroa.pipeline.defaultPipelines = irm-dit1-ingest
 
 cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
 
-spring.flyway.schemas = studio
-spring.flyway.locations=classpath:/db/migration
-
-spring.datasource.url = jdbc:postgresql://google/zorroa_dit1?currentSchema=studio&useSSL=false&socketFactoryArg=rmaas-dit-1:us-central1:zorroa-pg&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=Mvr2tPefAa1iyA0F
+spring.datasource.url = jdbc:postgresql://google/zorroa_dit1?currentSchema=analyst&useSSL=false&socketFactoryArg=rmaas-dit-1:us-central1:zorroa-pg&socketFactory=com.google.cloud.sql.postgres.SocketFactory&user=postgres&password=Mvr2tPefAa1iyA0F
 spring.datasource.username=postgres
 spring.datasource.password=Mvr2tPefAa1iyA0F
 
