analsyst: fixes test init by defaulting the storage class to a local empty impl

--- a/analyst/deploy/rmaas-dit-1/config/application.properties
+++ b/analyst/deploy/rmaas-dit-1/config/application.properties
@@ -3,7 +3,9 @@ gcp.pubsub.subscription = projects/rmaas-dit-1/subscriptions/rmaas-zorroa-ingest
 gcp.pubsub.project = rmaas-dit-1
 gcp.pubsub.enabled = true
 
-gcp.storage.bucket = rmaas-us-dit1
+analyst.storage.type = gcp
+analyst.storage.gcp.credentials = config/credentials.json
+analyst.storage.gcp.bucket = rmaas-us-dit1
 
 gcp.k8.url = https://104.197.39.88
 gcp.k8.username = admin
