Improvements to scheduler configuration and performance. - dynamimcally detect scheduler type - changed some config names - limit to 10 parallel jobs for now

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.flyway.locations=classpath:/db/migration
 spring.flyway.schemas = analyst
+
+logging.level.com.google.cloud.sql.core.SslSocketFactory=OFF
