--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.flyway.locations=classpath:/db/migration
 spring.flyway.schemas = analyst
 
+analyst.scheduler.type = local
+
 logging.level.com.google.cloud.sql.core.SslSocketFactory=OFF
