Utilize the ES client cache in lib-common

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.flyway.schemas = analyst
 
 analyst.scheduler.type = local
 
+### The default ES cluster URL
+analyst.routing.default-cluster-url = http://localhost:9200
+
 logging.level.com.google.cloud.sql.core.SslSocketFactory=OFF
