Made the scheduler max jobs configurable.

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.flyway.locations=classpath:/db/migration
 spring.flyway.schemas = analyst
 
 analyst.scheduler.type = local
+analyst.scheduler.max-jobs = 3
 
 ### The default ES cluster URL
 analyst.routing.default-cluster-url = http://localhost:9200
