Disable the google crazy logging on Postgres driver

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -280,6 +280,12 @@ logging.level.org.apache.catalina=OFF
 ### Disable CGLIB warnings for kotin.
 logging.level.org.springframework.aop.framework.CglibAopProxy=OFF
 
+### Disable some google logging
+logging.level.com.google.cloud.sql.postgres.SocketFactory=OFF
+
+### Disable some google logging
+logging.level.com.google.cloud.sql.core.SslSocketFactory=OFF
+
 ## Debug Configuration
 
 ### Set to true to enable debugging consoles for ES and H2
