Removed old k8 jobs.

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.flyway.schemas = analyst
 
 analyst.scheduler.type = local
 analyst.scheduler.max-jobs = 3
+analyst.scheduler.max-job-age-hours = 24
 
 ### The default ES cluster URL
 analyst.routing.default-cluster-url = http://localhost:9200
