Updates the dev environment and travis job to use docker compose to start es and postgres servers.

--- a/analyst/src/test/resources/test.properties
+++ b/analyst/src/test/resources/test.properties
@@ -15,8 +15,8 @@ zorroa.pipeline.defaultPipelines = test
 
 cdv.url = https://core-data-vault-api-dot-rmaas-dit-1.appspot.com
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/zorroa?currentSchema=analyst
-spring.datasource.username=${USER}
-spring.datasource.password=
+spring.datasource.url = jdbc:postgresql://localhost:35432/zorroa?currentSchema=analyst
+spring.datasource.username=zorroa
+spring.datasource.password=zorroa
 
-
+es-routing-service.url = http://localhost:39200
