--- a/archivist/src/test/resources/application-test.properties
+++ b/archivist/src/test/resources/application-test.properties
@@ -1,10 +1,13 @@
 
-spring.datasource.url = jdbc:postgresql://localhost/${USER}?currentSchema=unittest40
-spring.datasource.username=${USER}
-spring.datasource.password=
+spring.datasource.url = jdbc:postgresql://localhost:35432/zorroa?currentSchema=zorroa
+spring.datasource.username=zorroa
+spring.datasource.password=zorroa
 
 archivist.requests.managerEmail=${USER}@zorroa.com
 archivist.debug-mode.enabled = true
+
+es-routing-service.url = http://localhost:39200
+
 
 #
 # Run the the web server and event server on different port.
