--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,19 @@ services:
   - docker
 
 before_install:
-  - docker build -t unit-test-server . 
+  -
+  -
 
 install:
+  - cd es-similarity
+  - mvn clean install
+  - cd ../
+  - cp es-similarity/target/es-similarity.zip elasticsearch
+  - docker compose up -d
   - ./travis/travis-install-test-data.sh
-  - ./travis/travis-install-zorroa-plugin-sdk.sh
 
 script:
-  - pushd ..
-  - docker run -it -v $(pwd)/zorroa-server:/zorroa-server -v $(pwd)/zorroa-plugin-sdk:/zorroa-plugin-sdk -v $(pwd)/zorroa-test-data:/zorroa-test-data unit-test-server
-  - popd
+  - mvn test
 
 notifications:
   slack: zorroa:U0489fQGuSPls5EZZfSUoGsL
