Fixes bugs in travis job.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,11 @@ language: java
 services:
   - docker
 
-before_install:
-  -
-  -
-
 install:
   - cd es-similarity
-  - mvn clean install
+  - mvn package
   - cd ../
-  - cp es-similarity/target/es-similarity.zip elasticsearch
+  - cp es-similarity/target/releases/es-similarity.zip elasticsearch
   - docker compose up -d
   - ./travis/travis-install-test-data.sh
 
