Cleans and/or skips some tests to get the build passing.

--- a/analyst/src/test/resources/test.properties
+++ b/analyst/src/test/resources/test.properties
@@ -19,4 +19,5 @@ spring.datasource.url = jdbc:postgresql://localhost:35432/zorroa?currentSchema=a
 spring.datasource.username=zorroa
 spring.datasource.password=zorroa
 
-es-routing-service.url = http://localhost:39200
+analyst.routing.default-cluster-url = http://localhost:39200
+
