--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -140,7 +140,11 @@
             <artifactId>google-cloud-storage</artifactId>
             <version>1.32.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-pubsub</artifactId>
+            <version>1.32.0</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
