Adds the /api/v1/exports interface back to archivist.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -301,3 +301,17 @@ curator.lightbox.zoom-min =
 
 ### The maximum zoom for the lightbox
 curator.lightbox.zoom-max =
+
+## PubSub Settings
+
+### The subscription to listen to
+archivist.pubsub.type = local
+
+### The name of the google pubsub subscription
+archivist.pubsub.gcs.subscription = subscription
+
+### The name of the google projcet
+archivist.pubsub.gcs.project = project
+
+
+
