Reworked JWT tokens. - servers now look for service-credentials.json and data-credentials.json - service is for validating incoming JWT - data is for talking to Google
Removed configuration options that specified a creds path.
Removed some unneeded config options

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -5,7 +5,6 @@ analyst.scheduler.type = local
 analyst.scheduler.max-jobs = 3
 analyst.scheduler.max-job-age-hours = 24
 
-### The default ES cluster URL
-analyst.routing.default-cluster-url = http://localhost:9200
-
 logging.level.com.google.cloud.sql.core.SslSocketFactory=OFF
+logging.level.com.google.cloud.sql.postgres.SocketFactory=OFF
+
