Starts work on getting a local dev env working.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 # Archivist Settings
 
+## Global Configuration Options
+
+### Config directory path.
+archivist.config.path = /config
+
 ## Default Organization Settings
 
 ### Email domain
@@ -307,6 +312,3 @@ archivist.pubsub.gcs.subscription = subscription
 
 ### The name of the google projcet
 archivist.pubsub.gcs.project = project
-
-
-
