--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   test-es:
     build:
-      context: elasticsearch/.
+      context: elasticsearch
       args:
         node_type: single
     ports:
@@ -20,7 +20,7 @@ services:
       POSTGRES_DB: zorroa
   dev-es:
     build:
-      context: elasticsearch/.
+      context: elasticsearch
       args:
         node_type: single
     ports:
@@ -35,3 +35,11 @@ services:
       POSTGRES_PASSWORD: zorroa
       POSTGRES_USER: zorroa
       POSTGRES_DB: zorroa
+  archivist:
+    build:
+      context: archivist
+    ports:
+      - 8080:8080
+    volumes:
+      - "./localdev/archivist-config:/config"
+
