Fixes pubsub configuration option names.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -150,7 +150,7 @@ archivist.storage.minio.accessKey = zorroa
 
 ### The object store secret key
 archivist.storage.minio.secretKey = miniostorage
-        
+
 ## OFS Storage Settings
 
 archivivst.storage.ofs.path = shared/ofs
@@ -303,10 +303,8 @@ curator.lightbox.zoom-max =
 archivist.pubsub.type = local
 
 ### The name of the google pubsub subscription
-archivist.pubsub.gcs.subscription = subscription
+archivist.pubsub.gcp.subscription = subscription
 
 ### The name of the google projcet
 archivist.pubsub.gcs.project = project
-
-
 
